src/objects/Social_Post__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Due_Date__c</fullName>
        <description>Should automatically get set to seven days after an approval request is submitted.</description>
        <label>Approval Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked as true when an approval request is approved</description>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <label>Outlet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                    <default>true</default>
                    <label>Facebook</label>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Google+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manages the automatic approval reminder</description>
        <label>Reminder flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Post_Name__c</fullName>
        <formula>TEXT(Month__c) + &quot; &quot; + TEXT(Outlet__c) + &quot; Posts&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Post Name</label>
        <type>Text</type>
    </fields>
    <label>Social Post</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>